# ru-proverbs

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
ru_proverbs/: __init__.py  __main__.py  generator.py  ru_proverbs.txt  ru_proverbs_chars_config.json  ru_proverbs_chars_vocab.json
