[tool.poetry]
name = "ru_proverbs"
version = "1.1.0"
description = "Russian Proverbs AI-powered proverbs generation."
authors = ["Yurii Serhiichuk <savik.ne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
textgenrnn = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"
black = "^21.7b0"
mypy = "^0.910"
pip = "^20.2.3"

[tool.black]
line-length = 98
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
